@@ -590,21 +590,18 @@ struct synthv1_key
 
 struct synthv1_glide
 {
-	synthv1_glide(float& last) : m_last(last) { reset(); }
+	synthv1_glide(float& freq) : m_freq(freq) { reset(); }
 
 	void reset( uint32_t frames = 0, float freq = 0.0f )
 	{
 		m_frames = frames;
 
-		if (m_frames > 0 && m_last > 0.0f) {
-			m_freq = m_last - freq;
-			m_step = m_freq / float(m_frames);
+		if (m_frames > 0) {
+			m_step = (m_freq - freq) / float(m_frames);
 		} else {
-			m_freq = 0.0f;
+			m_freq = freq;
 			m_step = 0.0f;
 		}
-
-		m_last = freq;
 	}
 
 	float tick()
@@ -620,10 +617,9 @@ private:
 
 	uint32_t m_frames;
 
-	float m_freq;
 	float m_step;
 
-	float& m_last;
+	float& m_freq;
 };
 
 
